# TinyAFL

./: .gitignore  CMakeLists.txt  README.md  afl-cmin.py  afl-fuzz.cpp  afl-showmap.cpp  afl-tmin.cpp  alloc-inl.h  config.h  debug.h  hash.h  types.h
TinyInst/: CMakeLists.txt  litecov.cpp  litecov.h  sslhook-main.cpp  tinyinst.cpp  tinyinst.h
TinyInst/Windows/: debugger.cpp  debugger.h  winunwind.cpp  winunwind.h
TinyInst/macOS/: README.md  debugger.cpp  mig_client.c  mig_server.c  mig_server.h
